Piccole modifiche per poter implementare il backend al frontend.